Card content overflow issue fixed

--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,9 @@ nav {
     text-align: center;
     padding: 1rem;
     color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 nav img {
@@ -87,6 +90,14 @@ nav img {
     font-size: 0.6em;
     line-height: 150%;
     font-style: normal;
+    overflow: scroll;
+    margin-bottom: 20px;
+}
+
+.card--content {
+    overflow: hidden;
+    max-height: 4em;
+    overflow: scroll;
 }
 
 .maps--text {
